--- a/GuessNumber.vcxproj.filters
+++ b/GuessNumber.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Game.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="bot.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="bot.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
