--- a/GuessNumber.vcxproj.filters
+++ b/GuessNumber.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClCompile Include="Game.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="bot.cpp">
+    <ClCompile Include="Bot.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -29,7 +29,7 @@
     <ClInclude Include="Game.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="bot.h">
+    <ClInclude Include="Bot.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
